Fixed some tests